feat: auth, log worked in basic
