# src/auth/auth.controller.ts
@@ -1,27 +1,3 @@
-// import { Body, Controller, Post } from '@nestjs/common';
-// import { AuthService } from './auth.service';
-// import { AuthDto } from './dto/auth.dto';
-// import { RefreshToken } from './dto/refreshToken.dto';
-
-// @Controller('auth/')
-// export class AuthController {
-//   constructor(private readonly authService: AuthService) {}
-
-//   @Post('signup')
-//   signup(@Body() authDto: AuthDto) {
-//     return this.authService.signup(authDto);
-//   }
-
-//   @Post('login')
-//   login(@Body() authDto: AuthDto) {
-//     return this.authService.login(authDto);
-//   }
-
-//   @Post('refresh')
-//   refresh(@Body() refreshToken: RefreshToken) {
-//     return this.authService.refresh(refreshToken);
-//   }
-// }
 import {
   Controller,
   Body,
@@ -35,12 +11,14 @@ import {
 import { AuthService } from './auth.service';
 import { AuthDto } from './dto/auth.dto';
 import { RefreshToken } from './dto/refreshToken.dto';
+import { Public } from './auth.guard';
 
-@Controller('auth') // Указываем необязательный префикс
+@Controller('auth') // необязательный префикс
 export class AuthController {
   constructor(private readonly authService: AuthService) {}
 
-  @UsePipes(new ValidationPipe()) // Добавляем пайп с валидацией
+  @Public()
+  @UsePipes(new ValidationPipe())
   @Post('signup')
   public async signup(@Body() authDto: AuthDto) {
     return this.authService.signup(authDto).then((result) => {
@@ -50,6 +28,7 @@ export class AuthController {
     });
   }
 
+  @Public()
   @HttpCode(HttpStatus.OK)
   @UsePipes(new ValidationPipe())
   @Post('login')
@@ -57,6 +36,7 @@ export class AuthController {
     return this.authService.login(authDto);
   }
 
+  @Public()
   @Post('refresh')
   refresh(@Body() refreshToken: RefreshToken) {
     return this.authService.refresh(refreshToken);
