# src/auth/entities/auth.entity.ts
@@ -1,1 +1,4 @@
-export class Auth {}
+export type Auth = {
+  login: string;
+  password: string;
+};
